@@ -2723,6 +2723,28 @@ BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
 BrowserOS-Windows-NT-6-3
 
+# Internet Explorer with Chrome Frame extension on Windows 7
+Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US) AppleWebKit/534.13 (KHTML, like Gecko) Chrome/9.0.597.94 Safari/534.13 chromeframe/9.0.597.94
+Device-Desktop
+Device-NoPhone
+Browser-MSIE
+Browser-DesktopMSIE
+BrowserEngine-ChromeFrame
+BrowserEngine-ChromeFrame-9
+BrowserEngine-ChromeFrame-9-0
+BrowserEngine-ChromeFrame-9-0-597
+BrowserEngine-ChromeFrame-9-0-597-94
+BrowserEngine-WebKit
+BrowserEngine-WebKit-534
+BrowserEngine-WebKit-534-13
+BrowserEngine-WebKit-534-13-0
+BrowserEngine-WebKit-534-13-0-0
+BrowserOS-Windows
+BrowserOS-Windows-NT
+BrowserOS-Windows-NT-6
+BrowserOS-Windows-NT-6-1
+BrowserOS-Windows-7
+
 
 #-----------------------------------------------------------------------------
 # Mobile Internet Explorer
