@@ -1,6 +1,8 @@
 --- CHANGES SINCE UASNIFFER 1.4 (under development) --------------------------
 
 * Improved detection of mobile WebKit browser version.
+* Detecting Chrome Frame agent string on subrequests now, added unit test for:
+  - Internet Explorer with Chrome Frame extension on Windows 7.
 * Added unit tests for:
   - Mobile WebKit browser inside 1Password app on iPad.
   - MSIE 6.0 with Chrome Frame 11.0 extension.
